# argos

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  handoff.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
argos/core/: config.py
argos/ui/: analysis_window.py  design.py  shell.py  sidebar.py  statusbar.py  theme.py
argos/workers/: astrometry_controller.py  autofocus_worker.py  catalog_worker.py  discovery_worker.py  exposure_worker.py  polling_worker.py  preview_processor.py  sequence_worker.py  solve_worker.py  stellarium_worker.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  STATUS.md  acquisition_sequence.md  capture_panel.md  conf.py  fits_headers.md  index.html  index.rst  photometry_plan.md  plan_image_transfer.md  plan_live_preview.md  plan_mount_control.md  plan_protocol_architecture.md  redesign_3panel_plan.md  seestar_protocol.md  simulator_testing.md  ui_design.md  ui_redesign_todo.md
docs/_static/: custom.css
docs/api/: alpaca.rst  catalog.rst  imaging.rst  index.rst  photometry.rst  seestar.rst  stellarium.rst  ui.rst  workers.rst
docs/css/: style.css
docs/diagrams/: data_model.dot  data_model.md  photometry_pipeline.dot  photometry_pipeline.md  preview_chain.dot  sequence_execution.dot  sequence_execution.md  worker_lifecycle.md
legacy/backend/: index.html  main.py  seercontrol_proxy.py
scripts/: mock_alpaca_server.py  validate_alpaca.py  validate_imports.py  validate_native.py
seercontrol/core/: config.py  profiles.py
seercontrol/ui/: analysis_window.py  design.py  (+5 more)
tests/: conftest.py
(+165 files in other folders)
